--- a/src/css/chabudai.css
+++ b/src/css/chabudai.css
@@ -1,38 +1,60 @@
-.chabudai th[scope="row"] {
+.table-chabudai tr[aria-hidden] th {
+  border: transparent 1px solid;
+}
+
+.table-chabudai th {
   cursor: pointer;
 }
 
-.chabudai td {
-  padding: 0;
+.table-chabudai th:first-child {
+  cursor: default;
+}
+
+.table-chabudai td {
+  padding: .35rem .75rem;
   vertical-align: inherit;
+  white-space: nowrap;
 }
 
-.chabudai td .form-control {
-  background-color: inherit;
+.table-chabudai td input {
+  display: inline-block;
   border: none;
-  border-radius: 0;
-}
-
-.chabudai td .form-control[readonly] {
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  background-clip: padding-box;
   background-color: inherit;
 }
 
-.chabudai td .form-control:focus {
-  background-color: inherit;
+.table-chabudai td input:focus {
   box-shadow: none;
+  outline: none;
 }
 
-.chabudai td .custom-select {
+.table-chabudai td textarea {
+  width: 100%;
   border: none;
   border-radius: 0;
-  background-image: none;
+}
+
+.table-chabudai td textarea:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.table-chabudai td select {
+  min-width: 100%;
+  width: auto;
+  border: none;
+  background-color: inherit;
   cursor: pointer;
 }
 
-.chabudai td .custom-select:focus {
+.table-chabudai td select:focus {
   box-shadow: none;
+  outline: none;
 }
 
-.chabudai td.editing .custom-select {
-  background-color: blue;
+.table-chabudai .selected {
+  background-color: #99caff;
 }
