--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -13,3 +13,4 @@
 <script src="{{ site.baseurl }}/assets/js/chabudai.min.js"></script>
 
 <script src="{{ site.baseurl }}/assets/js/iris.js"></script>
+<script src="{{ site.baseurl }}/assets/js/starwars.js"></script>
