new editable config option
* disallow editing on certain columns
* row editing will only edit values of editable columns
* disable inputs and select when not editable
* hide select arrow when disabled

--- a/src/css/chabudai.css
+++ b/src/css/chabudai.css
@@ -55,6 +55,13 @@
   outline: none;
 }
 
+.table-chabudai td select:disabled {
+  color: inherit;
+  background-color: inherit;
+  background-image: none;
+  cursor: default;
+}
+
 .table-chabudai .selected {
   background-color: #99caff;
 }
