fix(pagination): responsive tables duplication
* Responsive tables no longer cause the pagination bar to duplicate (#1)
* Fixes #1

--- a/src/css/chabudai.css
+++ b/src/css/chabudai.css
@@ -31,6 +31,10 @@
   outline: none;
 }
 
+.table-chabudai td input:disabled {
+  color: inherit;
+}
+
 .table-chabudai td textarea {
   width: 100%;
   border: none;
