--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -33,6 +33,10 @@
       outline: none;
     }
 
+    input:disabled {
+      color: inherit;
+    }
+
     textarea {
       width: 100%;
       border: none;
