fix(pagination): move nav element into table caption
* Pagination is better controlled by placing the nav element inside the table
  html
* The table-chabudai class has been removed instead using the base bootstrap
  table class
* Version bumped to 0.0.6

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,4 +1,12 @@
-.table-chabudai {
+.table {
+  margin-bottom: 3rem;
+
+  caption {
+    nav {
+      position: absolute;
+    }
+  }
+
   tr[aria-hidden] {
     th {
       border: transparent 1px solid;
