--- a/src/css/chabudai.css
+++ b/src/css/chabudai.css
@@ -1,22 +1,30 @@
-.table-chabudai tr[aria-hidden] th {
+.table {
+  margin-bottom: 3rem;
+}
+
+.table caption nav {
+  position: absolute;
+}
+
+.table tr[aria-hidden] th {
   border: transparent 1px solid;
 }
 
-.table-chabudai th {
+.table th {
   cursor: pointer;
 }
 
-.table-chabudai th:first-child {
+.table th:first-child {
   cursor: default;
 }
 
-.table-chabudai td {
+.table td {
   padding: .35rem .75rem;
   vertical-align: inherit;
   white-space: nowrap;
 }
 
-.table-chabudai td input {
+.table td input {
   display: inline-block;
   border: none;
   padding: .375rem .75rem;
@@ -26,27 +34,27 @@
   background-color: inherit;
 }
 
-.table-chabudai td input:focus {
+.table td input:focus {
   box-shadow: none;
   outline: none;
 }
 
-.table-chabudai td input:disabled {
+.table td input:disabled {
   color: inherit;
 }
 
-.table-chabudai td textarea {
+.table td textarea {
   width: 100%;
   border: none;
   border-radius: 0;
 }
 
-.table-chabudai td textarea:focus {
+.table td textarea:focus {
   box-shadow: none;
   outline: none;
 }
 
-.table-chabudai td select {
+.table td select {
   min-width: 100%;
   width: auto;
   border: none;
@@ -54,18 +62,18 @@
   cursor: pointer;
 }
 
-.table-chabudai td select:focus {
+.table td select:focus {
   box-shadow: none;
   outline: none;
 }
 
-.table-chabudai td select:disabled {
+.table td select:disabled {
   color: inherit;
   background-color: inherit;
   background-image: none;
   cursor: default;
 }
 
-.table-chabudai .selected {
+.table .selected {
   background-color: #99caff;
 }
